--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ resume: true
 resume-external: true
 resume-url: assets/Resume.pdf
 
-url: https://koppl.in/indigo
+url: arnavgarg.me
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
