--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ background: assets/images/background.jpeg
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
-resume-external: true
+resume-external: false
 resume-url: assets/Resume.pdf
 
 url: https://thearnavgarg.github.io
