--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ resume: true
 resume-external: false
 resume-url: assets/Resume.pdf
 
-url: https://thearnavgarg.github.io
+url: http://arnavgarg.me
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
