added the authorname

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ github: thearnavgarg
 email: thearnavgarg@gmail.com
 
 authors:
-    johndoe:
+    arnavgarg:
         name: Arnav Garg
         bio: I am a software developer, open source enthusiast and a caffeine addict.
         external-image: true
