added the image

--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ authors:
     arnavgarg:
         name: Arnav Garg
         bio: I am a software developer, open source enthusiast and a caffeine addict.
-        external-image: true
+        external-image: false
         picture: assets/images/profile_img2.jpg
         twitter: thearnavgarg
 
