--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Arnav Garg
-bio: I am a software developer, open source enthusiast and a caffeine addict.
+bio: I am an engineer, open source enthusiast and a caffeine addict.
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -13,7 +13,7 @@ background: assets/images/background.jpeg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
+resume: false
 resume-external: false
 resume-url: assets/Resume.pdf
 
@@ -36,14 +36,14 @@ disqus:
 
 # if you don't have any of social below, comment the line
 facebook: thearnavg
-twitter: thearnavgarg
+twitter: hamsterz0
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-linkedin: arnavgarg30
+# linkedin: arnavgarg30
 # youtube: myyoutube
 # spotify: myspotify
-github: thearnavgarg
+github: hamstez0
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
@@ -56,7 +56,7 @@ email: thearnavgarg@gmail.com
 authors:
     arnavgarg:
         name: Arnav Garg
-        bio: I am a software developer, open source enthusiast and a caffeine addict.
+        bio: I am an engineer, open source enthusiast and a caffeine addict.
         external-image: false
         picture: assets/images/profile_img2.jpg
         twitter: thearnavgarg
